Added some sounds, and hopefully those nasty thumbs.db and master thing are gone

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ sysinfo.txt
 Editor.meta
 ProjectVersion.txt
 manifest.json #Talk to Caelum or Riley if you want to add a package
+# For some Windows Users
+Thumbs.db
 
 # Odin
 Sirenix/Assemblies/AOT
